# Rowdy

./: DEPLOY.md  DOCS.md  PLAN.md  phase-1-setup.md  phase-2-dsl.md  phase-3-piper.md  phase-4-api.md  phase-5-frontend.md  phase-6-testing.md
piper-tts-server/: .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  docker-compose.yml  speak  timecheck
piper-tts-server/.github/workflows/: ci.yml
piper-tts-server/src/: error.rs  lib.rs  main.rs
piper-tts-server/src/api/: handlers.rs  mod.rs  routes.rs
piper-tts-server/src/dsl/: mod.rs  parser.rs  transforms.rs
piper-tts-server/src/tts/: mod.rs  piper.rs  voice.rs
piper-tts-server/static/: app.js  index.html  style.css
piper-tts-server/voices/: .gitkeep
