[package]
name = "piper-tts-server"
version = "0.1.0"
edition = "2021"
description = "A lightweight TTS server using Piper with expression DSL"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# ONNX runtime for Piper
ndarray = "0.16"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio processing
hound = "3"
rodio = { version = "0.19", optional = true }

# Utilities
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
lazy_static = "1"

[features]
default = ["audio-playback"]
audio-playback = ["rodio"]

[dev-dependencies]
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"

[profile.release]
lto = true
codegen-units = 1

# Use download-binaries for regular builds, no features for musl (will use system lib)
[target.'cfg(not(target_env = "musl"))'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }

[target.'cfg(target_env = "musl")'.dependencies]
ort = { version = "2.0.0-rc.10", default-features = false, features = ["std"] }
